--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>accessu2014</title>
+    <title>Start</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <link href="http://fonts.googleapis.com/css?family=Cutive+Mono|Carter+One" rel="stylesheet" type="text/css">
     <link href="big.css" rel="stylesheet" type="text/css">
@@ -13,7 +13,7 @@
     <div class="slide"><h3>Onward!</h3></div>
     <div class="slide"><p>A <a href="http://davidakennedy.com">link</a> example.</p></div>
     <div class="slide"><h3>A code example</h3></div>
-    <div class="slide"><div class="gist"><pre><code>&lt;label&gt;Placeholders are not labels&lt;/label&gt;</code></pre></div></div>
+    <div class="slide"><div class="code"><pre><code>&lt;label&gt;Placeholders are not labels&lt;/label&gt;</code></pre></div></div>
     <script type="text/javascript" src="big.js"></script>
   </body>
 </html>
